--- a/Code/Topic classification.ipynb
+++ b/Code/Topic classification.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
    ],
    "source": [
     "# Define the path\n",
-    "prefix = '/Users/fdp54928/Documents/openalex-topic-classification/model/'\n",
+    "prefix = '{insert pathname to model artifacts}'\n",
     "model_path = os.path.join(prefix, 'topic_classifier_v1_artifacts')\n",
     "\n",
     "# Load the needed files\n",
