--- a/Code/Topic classification.ipynb
+++ b/Code/Topic classification.ipynb
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1209,17 +1209,24 @@
     "for i in range(n):\n",
     "    batch_non_empty[i]['topic predictions']=results_non_empty[i]\n",
     "    batch_non_empty[i]['has referenced works']=1\n",
+    "    batch_non_empty[i]['Proposal number']=prop_esrf_non_empty['proposal'].to_list()[i]\n",
+    "    batch_non_empty[i]['Experiment session DOI']=prop_esrf_non_empty['experiment session doi'].to_list()[i]\n",
+    "    batch_non_empty[i]['referenced_works DOI']=prop_esrf_non_empty['publications DOI'].to_list()[i]\n",
+    "\n",
     "\n",
     "\n",
     "n = len(batch_empty)\n",
     "for i in range(n):\n",
     "    batch_empty[i]['topic predictions']=results_empty[i]\n",
-    "    batch_empty[i]['has referenced works']=0\n"
+    "    batch_empty[i]['has referenced works']=0\n",
+    "    batch_empty[i]['Proposal number']=prop_esrf_empty['proposal'].to_list()[i]\n",
+    "    batch_empty[i]['Experiment session DOI']=prop_esrf_empty['experiment session doi'].to_list()[i]\n",
+    "    batch_empty[i]['referenced_works DOI']=prop_esrf_empty['publications DOI'].to_list()[i]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1229,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [],
    "source": [
