--- a/Code/Topic classification.ipynb
+++ b/Code/Topic classification.ipynb
@@ -2,9 +2,21 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'GrobidClient' from 'grobid_client' (/Users/fdp54928/Library/CloudStorage/OneDrive-Nexus365/GitHub Repositories/DPhil-Project/Code/venv/lib/python3.11/site-packages/grobid_client/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[6], line 14\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msentence_transformers\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m SentenceTransformer\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mre\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mgrobid_client\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m GrobidClient\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'GrobidClient' from 'grobid_client' (/Users/fdp54928/Library/CloudStorage/OneDrive-Nexus365/GitHub Repositories/DPhil-Project/Code/venv/lib/python3.11/site-packages/grobid_client/__init__.py)"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import pickle\n",
@@ -1081,7 +1093,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,6 +1110,248 @@
     "# # Remove some proposals with no publications DOIs (missed them earlier)\n",
     "\n",
     "# prop_esrf_non_empty=prop_esrf_non_empty[prop_esrf_non_empty['openalex_ids'].apply(lambda x: x != [[]])]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>proposal</th>\n",
+       "      <th>summary</th>\n",
+       "      <th>title</th>\n",
+       "      <th>subject</th>\n",
+       "      <th>experiment session doi</th>\n",
+       "      <th>publications DOI</th>\n",
+       "      <th>openalex_ids</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A01-2-1255</td>\n",
+       "      <td>We developed a crystallization strategy that p...</td>\n",
+       "      <td>Understanding the structure of two-dimensional...</td>\n",
+       "      <td></td>\n",
+       "      <td>[10.15151/ESRF-ES-670011338]</td>\n",
+       "      <td>[10.1038/s41563-023-01669-z]</td>\n",
+       "      <td>[https://openalex.org/W4386923995]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>A01-2-1271</td>\n",
+       "      <td>We have synthetized and fully characterized th...</td>\n",
+       "      <td>Crystal structure of Pauflerite</td>\n",
+       "      <td></td>\n",
+       "      <td>[10.15151/ESRF-ES-745262790]</td>\n",
+       "      <td>[10.1103/PhysRevMaterials.7.045003]</td>\n",
+       "      <td>[https://openalex.org/W4366222734]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>A01-2-1291</td>\n",
+       "      <td>Barocaloric (BC) materials are solid state com...</td>\n",
+       "      <td>revealing structural mechanisms in high perfor...</td>\n",
+       "      <td></td>\n",
+       "      <td>[10.15151/ESRF-ES-1106933962]</td>\n",
+       "      <td>[10.1002/adma.202310499]</td>\n",
+       "      <td>[https://openalex.org/W4389817329]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>A01-2-1313</td>\n",
+       "      <td>Conversion/alloying materials (CAMs) as anodes...</td>\n",
+       "      <td>High-rate operando XRD studies on conversion/a...</td>\n",
+       "      <td></td>\n",
+       "      <td>[10.15151/ESRF-ES-1361431177, 10.15151/ESRF-ES...</td>\n",
+       "      <td>[10.1021/acs.chemmater.4c01104]</td>\n",
+       "      <td>[https://openalex.org/W4399629050]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>41</th>\n",
+       "      <td>A01-2-1324</td>\n",
+       "      <td>In this experiment, we aim to study mechanism ...</td>\n",
+       "      <td>In-situ graphene formation in a nanoporous syn...</td>\n",
+       "      <td></td>\n",
+       "      <td>[10.15151/ESRF-ES-1578692758]</td>\n",
+       "      <td>[10.1002/adem.202301415]</td>\n",
+       "      <td>[https://openalex.org/W4388771859]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4362</th>\n",
+       "      <td>SC-5324</td>\n",
+       "      <td>Chocolate is a popular confectionary and its d...</td>\n",
+       "      <td>Understanding of the crystallization behaviour...</td>\n",
+       "      <td>Soft Condensed Matter Science</td>\n",
+       "      <td>[10.15151/ESRF-ES-886331097]</td>\n",
+       "      <td>[10.1016/j.foodres.2023.113864]</td>\n",
+       "      <td>[https://openalex.org/W4390047110]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4363</th>\n",
+       "      <td>SC-5327</td>\n",
+       "      <td>The interaction kinetics of lipid nanoparticle...</td>\n",
+       "      <td>Millisecond Rapid Mixing Stopped-Flow BioSAXS ...</td>\n",
+       "      <td>Soft Condensed Matter Science</td>\n",
+       "      <td>[10.15151/ESRF-ES-896696151]</td>\n",
+       "      <td>[10.1002/anie.202304977, 10.1021/acs.jpcb.4c03...</td>\n",
+       "      <td>[https://openalex.org/W4382777310, https://ope...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4391</th>\n",
+       "      <td>SC-5396</td>\n",
+       "      <td>In this proposal we aim to understand how the ...</td>\n",
+       "      <td>Microstructural response of graphite nanoplate...</td>\n",
+       "      <td>Soft Condensed Matter Science</td>\n",
+       "      <td>[10.15151/ESRF-ES-1210181200]</td>\n",
+       "      <td>[10.1016/j.colsurfa.2024.134997]</td>\n",
+       "      <td>[https://openalex.org/W4401502799]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4414</th>\n",
+       "      <td>SC-5455</td>\n",
+       "      <td>Carrageenan and gelatin are biopolymers that m...</td>\n",
+       "      <td>Bio-polymers thermos-reversible gelation, a co...</td>\n",
+       "      <td>Soft Condensed Matter Science</td>\n",
+       "      <td>[10.15151/ESRF-ES-1347514467]</td>\n",
+       "      <td>[10.1103/PhysRevMaterials.8.L072601]</td>\n",
+       "      <td>[https://openalex.org/W4400448992]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4466</th>\n",
+       "      <td>SC-5576</td>\n",
+       "      <td>Hybrid perovskite structures are promising mat...</td>\n",
+       "      <td>Lead halide perovskite crystallization in-situ...</td>\n",
+       "      <td>Soft Condensed Matter Science</td>\n",
+       "      <td>[10.15151/ESRF-ES-1469695094]</td>\n",
+       "      <td>[10.1002/advs.202405622]</td>\n",
+       "      <td>[https://openalex.org/W4400334870]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>534 rows × 7 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        proposal                                            summary  \\\n",
+       "4     A01-2-1255  We developed a crystallization strategy that p...   \n",
+       "13    A01-2-1271  We have synthetized and fully characterized th...   \n",
+       "26    A01-2-1291  Barocaloric (BC) materials are solid state com...   \n",
+       "38    A01-2-1313  Conversion/alloying materials (CAMs) as anodes...   \n",
+       "41    A01-2-1324  In this experiment, we aim to study mechanism ...   \n",
+       "...          ...                                                ...   \n",
+       "4362     SC-5324  Chocolate is a popular confectionary and its d...   \n",
+       "4363     SC-5327  The interaction kinetics of lipid nanoparticle...   \n",
+       "4391     SC-5396  In this proposal we aim to understand how the ...   \n",
+       "4414     SC-5455  Carrageenan and gelatin are biopolymers that m...   \n",
+       "4466     SC-5576  Hybrid perovskite structures are promising mat...   \n",
+       "\n",
+       "                                                  title  \\\n",
+       "4     Understanding the structure of two-dimensional...   \n",
+       "13                      Crystal structure of Pauflerite   \n",
+       "26    revealing structural mechanisms in high perfor...   \n",
+       "38    High-rate operando XRD studies on conversion/a...   \n",
+       "41    In-situ graphene formation in a nanoporous syn...   \n",
+       "...                                                 ...   \n",
+       "4362  Understanding of the crystallization behaviour...   \n",
+       "4363  Millisecond Rapid Mixing Stopped-Flow BioSAXS ...   \n",
+       "4391  Microstructural response of graphite nanoplate...   \n",
+       "4414  Bio-polymers thermos-reversible gelation, a co...   \n",
+       "4466  Lead halide perovskite crystallization in-situ...   \n",
+       "\n",
+       "                            subject  \\\n",
+       "4                                     \n",
+       "13                                    \n",
+       "26                                    \n",
+       "38                                    \n",
+       "41                                    \n",
+       "...                             ...   \n",
+       "4362  Soft Condensed Matter Science   \n",
+       "4363  Soft Condensed Matter Science   \n",
+       "4391  Soft Condensed Matter Science   \n",
+       "4414  Soft Condensed Matter Science   \n",
+       "4466  Soft Condensed Matter Science   \n",
+       "\n",
+       "                                 experiment session doi  \\\n",
+       "4                          [10.15151/ESRF-ES-670011338]   \n",
+       "13                         [10.15151/ESRF-ES-745262790]   \n",
+       "26                        [10.15151/ESRF-ES-1106933962]   \n",
+       "38    [10.15151/ESRF-ES-1361431177, 10.15151/ESRF-ES...   \n",
+       "41                        [10.15151/ESRF-ES-1578692758]   \n",
+       "...                                                 ...   \n",
+       "4362                       [10.15151/ESRF-ES-886331097]   \n",
+       "4363                       [10.15151/ESRF-ES-896696151]   \n",
+       "4391                      [10.15151/ESRF-ES-1210181200]   \n",
+       "4414                      [10.15151/ESRF-ES-1347514467]   \n",
+       "4466                      [10.15151/ESRF-ES-1469695094]   \n",
+       "\n",
+       "                                       publications DOI  \\\n",
+       "4                          [10.1038/s41563-023-01669-z]   \n",
+       "13                  [10.1103/PhysRevMaterials.7.045003]   \n",
+       "26                             [10.1002/adma.202310499]   \n",
+       "38                      [10.1021/acs.chemmater.4c01104]   \n",
+       "41                             [10.1002/adem.202301415]   \n",
+       "...                                                 ...   \n",
+       "4362                    [10.1016/j.foodres.2023.113864]   \n",
+       "4363  [10.1002/anie.202304977, 10.1021/acs.jpcb.4c03...   \n",
+       "4391                   [10.1016/j.colsurfa.2024.134997]   \n",
+       "4414               [10.1103/PhysRevMaterials.8.L072601]   \n",
+       "4466                           [10.1002/advs.202405622]   \n",
+       "\n",
+       "                                           openalex_ids  \n",
+       "4                    [https://openalex.org/W4386923995]  \n",
+       "13                   [https://openalex.org/W4366222734]  \n",
+       "26                   [https://openalex.org/W4389817329]  \n",
+       "38                   [https://openalex.org/W4399629050]  \n",
+       "41                   [https://openalex.org/W4388771859]  \n",
+       "...                                                 ...  \n",
+       "4362                 [https://openalex.org/W4390047110]  \n",
+       "4363  [https://openalex.org/W4382777310, https://ope...  \n",
+       "4391                 [https://openalex.org/W4401502799]  \n",
+       "4414                 [https://openalex.org/W4400448992]  \n",
+       "4466                 [https://openalex.org/W4400334870]  \n",
+       "\n",
+       "[534 rows x 7 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "prop_esrf_non_empty"
    ]
   },
   {
@@ -1258,9 +1512,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (venv)",
+   "display_name": "venv",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
